# RayTraycing

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  main.cpp
.cache/clangd/index/: data.cpp.F6C8C698E483B1FB.idx  engine.cpp.D0CCC593F4226070.idx  engine.h.79790DC1E07FCD43.idx  main.cpp.B60505D1C45368B4.idx  shapes.cpp.81E3CA81A712260F.idx  shapes.h.0036709FF77F4EE2.idx  subEngine.cpp.9D2C44D1C8E348AE.idx  subEngine.h.B50EBE4A1069DABF.idx
include/: engine.h  shapes.h  subEngine.h
src/: data.cpp  engine.cpp  main.cpp  shapes.cpp  subEngine.cpp
